<resources>
    <string name="app_name" translatable="false">ProjectoFinal</string>
    <string name="facebook_app_id" translatable="false">1065592847246745</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1065592847246745</string>
    <string name="sex_male">Hombre</string>
    <string name="sex_female">Mujer</string>
    <string name="sex_other">Otro</string>
    <string name="homeCategory">Hogar</string>
    <string name="educationAndSportsCategory">Educacion y Deportes</string>
    <string name="estheticCategory">Estetica</string>
    <string name="careAndHealhCategory">Cuidados y Salud</string>
    <string name="computingAndAudiovisualCategory">Informatica y Audiovisuales</string>
    <string name="othersCategory">Otros</string>
    <string name="resource_always_available">24 horas disponible</string>
    <string name="resource_has_car">Tiene coche</string>
    <string name="resource_credit_card">Acepta tarjeta credito</string>
    <string name="resource_home_service">Servicio domicion</string>
    <string name="resource_works_weekend_and_holidays">Trabaja findes</string>
    <string name="register_activity_title">Registrarse</string>
    <string name="valuation_activity_title">Envia tu valoracion</string>
    <string name="job_offered_activity_title">Trabajos ofertados</string>
    <string name="create_job_activity_title">Crear un trabajo</string>
    <string name="sign_in_activity_title">Iniciar sesion</string>
    <string name="title_activity_chat_conversation">Conversacion</string>
    <string name="post_fragment_title">Menu principal</string>
    <string name="edit_profile_activity_title">Editar perfil</string>
    <string name="edit_settings_worker_activity_title">Ajustes</string>
    <string name="auctions_activity_title">Subastas</string>
    <string name="favourites_workers_activity_title">Favoritos</string>
    <string name="jobs_activity_title">Trabajos</string>
    <string name="settings_activity_title">Ajustes</string>
    <string name="verify_account_activity_title">Verificar numero telefono</string>
    <string name="activity_register_hint_password_input_text">Contraseña <font fgcolor='red'>*</font></string>
    <string name="activity_register_hint_password_repeat_input_text">Repetir contraseña <font fgcolor='red'>*</font></string>
    <string name="activity_register_hint_email_input_text">Correo electronico <font fgcolor='red'>*</font></string>
    <string name="activity_register_text_accept_conditions">Al registrarme confirmo que he leido y acepto todos los terminos de uso y la polica de privacidad. Tamien que tengo como minimo 18 años.</string>
    <string name="activity_register_want_receive_newsletter">Quiero recibir newsletter</string>
    <string name="activity_register_btn_register">Registrarme</string>
    <string name="btn_sign_in">Iniciar Sesion</string>
    <string name="patter_spinner_subcategories">Seleccione alguna categoria/subcategoria</string>
    <string name="patter_select_almost_one_image">Selecciona una imagen</string>
    <string name="pattern_password_digits_between_0_9">Debe tener menos un numero entre 0–9.</string>
    <string name="pattern_password_min_lower_case">Debe tener al menos una minúscula.</string>
    <string name="pattern_password_min_upper_case">Debe tener al menos una mayúscula.</string>
    <string name="pattern_password_corretly_length">Debe ser entre 8–20 caracteres</string>
    <string name="pattern_last_name_correct_length">Apellido demasiado largo</string>
    <string name="pattern_last_name_void_field">Debe introducir algun apellido.</string>
    <string name="pattern_about_correct_length">Sobre mi demasiado largo</string>
    <string name="pattern_schedule_correct_length">Horario demasiado largo</string>
    <string name="pattern_title_correct_length">Debe ser entre 0–40 caracteres.</string>
    <string name="pattern_title_void_field">Debe introducir algun titulo.</string>
    <string name="pattern_name_correct_length">Nombre demasiado largo</string>
    <string name="pattern_name_void_field">Debe introducir algun nombre.</string>
    <string name="pattern_description_correct_length">Debe ser entre 0–240 caracteres.</string>
    <string name="pattern_description_void_field">Debe introducir alguna descripcion.</string>
    <string name="pattern_email_void_field">Introduzca algun correo.</string>
    <string name="pattern_email_wrong_pattern">Introduzca algun correo valido.</string>
    <string name="pattern_password_not_equal_passwords">Las contraseñas no son iguales</string>
    <string name="pattern_pasword_header_result">La contraseña:</string>
    <string name="sign_in_with_google">Entrar con google</string>
    <string name="sign_in_with_facebook">Entrar con facebook</string>
    <string name="sign_in_with_email">Iniciar sesion con e-mail</string>
    <string name="register_with_google">Registrate con google</string>
    <string name="register_with_facebook">Registrate con facebook</string>
    <string name="register_with_email">Registrarte con e-mail</string>
    <string name="menuNameWorkers">Trabajadores</string>
    <string name="menuNameJobs">Trabajos</string>
    <string name="menuNameChats">Chats</string>
    <string name="menuNameProfile">Perfil</string>
    <string name="spinner_category_hint">Selecciona una categoria</string>
    <string name="spinner_subcategories_hint">Selecciona una subcateogria</string>
    <string name="estimated_price">Precio estimado</string>
    <string name="description_new_job">Description</string>
    <string name="price_per_hour">Precio por hora</string>
    <string name="title_new_job">Titulo</string>
    <string name="basic_information_new_job">Informacion basica</string>
    <string name="max_10_photos">Sube hasta 10 fotos</string>
    <string name="job_offered_dialog_apply_title">Aplicar al trabajo</string>
    <string name="job_offered_dialog_apply_message">Rellene los datos</string>
    <string name="job_offered_dialog_apply_positive_button">Aplicar</string>
    <string name="job_offered_dialog_apply_negative_button">Cancelar</string>
    <string name="job_offered_dialog_confirm_cancel_title">Confirmacion</string>
    <string name="job_offered_dialog_confirm_cancel_message">¿Esta seguro que quiera dejar de aplicar a este trabajo?</string>
    <string name="job_offered_dialog_confirm_cancel_positive_button">Si,estoy seguro</string>
    <string name="job_offered_dialog_confirm_cancel_negative_button">Cancelar</string>
    <string name="job_offered_cancel">Cancelar aplicacion</string>
    <string name="job_offered_apply">Aplicar trabajo</string>
    <string name="job_offered_dialog_be_worker_title">Confirmar</string>
    <string name="job_offered_type_message">Introduzca algun mensaje</string>
    <string name="job_offered_type_message_large">Mensaje demasiado largo</string>
    <string name="job_offered_price">Introduzca algun presupuesto</string>
    <string name="job_offered_apply_job">Aplicar trabajo</string>
    <string name="job_offered_applying">Profesionales aplicando</string>
    <string name="job_offered_apply_description">Descripcion</string>
    <string name="job_offered_apply_see_profile">Ver Perfil</string>
    <string name="job_offered_subcategory">Subcategoria:</string>
    <string name="job_offered_category">Categoria:</string>
    <string name="dialog_confirm_close_create_job_activity_title">¿Desea salir?</string>
    <string name="dialog_confirm_close_create_job_activity_message">El trabajo no se ha creado, si sale se perderan todos los datos.</string>
    <string name="dialog_confirm_close_create_job_activity_cancel">¡Me quedo!</string>
    <string name="dialog_confirm_close_create_job_activity_ok">Salir</string>
    <string-array name="job_states">
        <item>Publicados</item>
        <item>En progreso</item>
        <item>Finalizados</item>
    </string-array>
    <string name="permission_call_reject_message">Tienes que habilitar los permisos</string>
    <string name="permission_call_try_again">Intentar de nuevo</string>
    <string name="permission_call_no_thanks">No, gracias</string>
    <string name="permission_call_enable_manually">Tienes que habilitar los permisos manualmente</string>
    <string name="permission_call_title">Permisos requeridos</string>
    <string name="permission_call_reject_many_times_message">Has rechazado los permisos muchas veces asi que si quieres usar esta funcion, necesitas habilitarlos manualmente</string>
    <string name="permission_call_ok">Vale</string>
    <string name="date_format_of">de</string>
    <string name="date_format_yesterday">Hoy</string>
    <string name="date_format_today">Ayer</string>
    <string name="workers_on_auction">trabajadores en la puja</string>
    <string name="jobs_adapter_alert_confirm_title">Confirmacion</string>
    <string name="jobs_adapter_alert_confirm_message">Esta seguro de marcar como terminado el trabajo</string>
    <string name="jobs_adapter_alert_confirm_positive_button">Terminado</string>
    <string name="jobs_adapter_alert_confirm_negative_button">Cancelar</string>
    <string name="jobs_adapter_alert_opinion_title">Opinion</string>
    <string name="jobs_adapter_alert_opinion_message">¿Quieres poner la opinion ahora?</string>
    <string name="jobs_adapter_alert_opinion_positive_button">Opinar</string>
    <string name="jobs_adapter_alert_opinion_negative_button">Despues</string>
    <string name="my_auctions_fragment_alert_title">Confirmacion</string>
    <string name="my_auctions_fragment_alert_message">¿Estas seguro que desea eliminar la siguiente skill</string>
    <string name="my_auctions_fragment_alert_negative_button">Cancelar</string>
    <string name="my_auctions_fragment_alert_positive_button">Eliminar</string>
    <string name="fail_to_send_sms">Error al enviar el sms</string>
    <string name="wrong_code">Codigo erroneo</string>
    <string name="code_confirmed">Usuario verificado correctamente</string>
    <string name="jobs_activity_jobs_received">Trabajos recibidos</string>
    <string name="jobs_activity_jobs_done">Trabajos realizados</string>
    <string name="chat_conversation_write_message">Escribir mensaje…</string>
    <string name="chat_conversation_field_message_void">Escriba un mensaje</string>
    <string name="chat_converstation_last_connection_today">ult. vez hoy a las</string>
    <string name="chat_converstation_last_connection_yesterday">ult. vez ayer a las</string>
    <string name="chat_converstation_last_connection">ult. vez</string>
    <string name="chat_converstation_connected">conectado</string>
    <string name="chat_conversation_typing">escribiendo…</string>
    <string name="notification_new_message">Nuevo Mensaje</string>
    <string name="edit_profile_delete_account">ELIMINAR CUENTA</string>
    <string name="edit_profile_location_exact">Ubicacion exacta</string>
    <string name="edit_profile_location">Ubicacion</string>
    <string name="edit_profile_birthdate">Fecha nacimiento</string>
    <string name="edit_profile_sex">Sexo</string>
    <string name="edit_profile_private_information">Informacion privada</string>
    <string name="edit_profile_schedule">Horario</string>
    <string name="edit_profile_about">Sobre mi</string>
    <string name="edit_profile_last_name">Apellidos</string>
    <string name="edit_profile_name">Nombre</string>
    <string name="edit_profile_basic_information">Informacion basica</string>
    <string name="edit_profile_change">Cambiar</string>
    <string name="edit_profile_change_photo_profile">Cambiar foto de perfil</string>
    <string name="edit_profile_change_landscape_photo">Cambiar foto de portada</string>
    <string name="edit_profile_select_date">Selecciona una fecha</string>
    <string name="category_selected_order">Ordenar</string>
    <string name="category_selected_price">Precio</string>
    <string name="category_selected_last_conexion">Ultima conexion</string>
</resources>