<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.activities.login.RegisterActivity"
    android:fitsSystemWindows="true">
    <include layout="@layout/own_toolbar" android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_hint_email_input_text"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
          >

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_hint_password_input_text"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPasswordRepeat"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="20"

            app:endIconMode="password_toggle"
         >

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_register_hint_password_repeat_input_text"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_want_receive_newsletter"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_text_accept_conditions"
            />
        <Button
            android:id="@+id/btnRegister"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_btn_register"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>