<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomShettLoginContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/tittleFragment"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/register_activity_title"/>
        <ImageView
            android:id="@+id/closeFragment"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_close"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_500" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnRegisterWithGoogle"
            android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_logo_google"
            android:text="@string/register_with_google" />

        <Button
            android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnRegisterWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_logo_facebook"

            android:text="@string/register_with_facebook" />

        <TextView
            android:id="@+id/btnContinueEmail"
            android:textColor="@color/teal_200"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_with_email"
            android:paddingBottom="15dp"
            />
    </LinearLayout>

</LinearLayout>