<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">
        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/category"
            android:hint="@string/spinner_category_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
        </com.jaredrummler.materialspinner.MaterialSpinner>
        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/subCategory"
            android:hint="@string/spinner_subcategories_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
 >

        </com.jaredrummler.materialspinner.MaterialSpinner>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleSkill"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_new_job"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceSkill"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:endIconDrawable="@drawable/ic_close"
            app:boxBackgroundColor="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_per_hour"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>