<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.activities.CreateJobActivity"
    android:fitsSystemWindows="true">
    <include layout="@layout/own_toolbar" android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            app:contentPaddingBottom="25dp"
            app:contentPaddingTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_10_photos"
                    android:textAlignment="center"/>

                <ImageView
                    android:focusable="true"
                    android:clickable="true"
                    android:id="@+id/addPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:src="@drawable/ic_add_photo"
                    app:tint="@color/teal_700"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:id="@+id/rvImagesSelected"
                    android:visibility="gone"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:contentPaddingBottom="15dp"
            app:contentPaddingTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/basic_information_new_job" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    app:boxBackgroundColor="@color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="40"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_new_job"
                        android:inputType="text"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    app:boxBackgroundColor="@color/white"
                    app:counterEnabled="true"
                    app:counterMaxLength="240"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/description_new_job"
                        android:inputType="textMultiLine"
                        android:lines="5" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/category"
                    android:hint="@string/spinner_category_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"

                    >

                </com.jaredrummler.materialspinner.MaterialSpinner>
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/subCategory"
                    android:hint="@string/spinner_subcategories_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp">

                </com.jaredrummler.materialspinner.MaterialSpinner>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>