<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.activities.CategorySelectedActivity"
    android:fitsSystemWindows="true">

    <include layout="@layout/own_toolbar" android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/category_selected_order"
                    app:chipBackgroundColor="@color/purple_200" />



                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/category_selected_price"
                    app:chipBackgroundColor="@color/purple_200" />
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLastConexion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/category_selected_last_conexion"
                    app:chipBackgroundColor="@color/purple_200" />

            </LinearLayout>
        </HorizontalScrollView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvCategorySelected"
            android:padding="10dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/loading"
        android:layout_gravity="center"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>